--- a/app/views/equipment/show.html.erb
+++ b/app/views/equipment/show.html.erb
@@ -1,18 +1,17 @@
 <div class="container">
-
   <div class="header">
-    <p style="color: green"><%= notice %></p>
-    <div class="d-flex justify-content-between">
-      <div>
-        <%= link_to "Volver", equipment_index_path, class: "btn btn-outline-secondary" %>
-        <%= link_to "Editar", edit_equipment_path(@equipment), class: "btn btn-primary" %>
-      </div>
+    <div class="header__left">
+      <%= link_to "Volver", equipment_index_path, class: "btn btn-outline-secondary" %>
+      <p style="color: green"><%= notice %></p>
+    </div>
+    <div class="header__right">
+      <%= link_to "Editar", edit_equipment_path(@equipment), class: "btn btn-primary" %>
       <% if current_user&.admin == 'admin' %>
         <%= button_to "Eliminar", @equipment, method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
       <% end %>
     </div>
   </div>
-
+  <%#  %>
   <%= render @equipment %>
-
+  <%#  %>
 </div>
