--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,32 +1,31 @@
-<div class="col-6 mx-auto">
-  <div class="card">
-    <h3 class="card-header">Sign up</h3>
-    <div class="card-body">
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'needs-validation' }) do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
+<div class="container-registration col-md-6">
+  <div class="container-registration__card">
+    <h2 class="container-registration__h2">Sign up</h2>
+    <%#  %>
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: 'needs-validation' }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-        <div class="form-label">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', required: true, placeholder: "Ingrese su correo electrónico" %>
-        </div>
+      <div class="form-label">
+        <%= f.label :email %><br />
+        <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control', required: true, placeholder: "Enter your email" %>
+      </div>
 
-        <div class="form-label">
-          <%= f.label :password %>
-          <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> caracteres como mínimo)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', required: true, placeholder: "Ingrese su contraseña" %>
-        </div>
+      <div class="form-label">
+        <%= f.label :password %>
+        <% if @minimum_password_length %>
+          <em>(<%= @minimum_password_length %> characters minimum)</em>
+        <% end %><br />
+        <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', required: true, placeholder: "Enter your password" %>
+      </div>
 
-        <div class="form-label">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', required: true, placeholder: "Confirme su contraseña" %>
-        </div>
-        <hr>
-        <div class="actions">
-          <%= f.submit "Sign up", class: 'btn btn-primary' %>
-        </div>
-      <% end %>
-    </div>
+      <div class="form-label">
+        <%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', required: true, placeholder: "Confirm your password" %>
+      </div>
+      <div class="actions container-registration__actions">
+        <%= f.submit "Sign up", class: 'btn btn-primary' %>
+      </div>
+    <% end %>
+    <%#  %>
   </div>
 </div>
