--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -1,8 +1,7 @@
 <%= form_with(model: equipment, class: "form") do |form| %>
   <% if equipment.errors.any? %>
     <div class="alert alert-danger">
-      <h2><%= pluralize(equipment.errors.count, "error") %> prohibited this equipment from being saved:</h2>
-
+      <h4><%= pluralize(equipment.errors.count, "error") %> prohibited this equipment from being saved:</h4>
       <ul>
         <% equipment.errors.each do |error| %>
           <li><%= error.full_message %></li>
@@ -13,25 +12,26 @@
 
   <div class="mb-3">
     <%= form.label :equipment_type, class: "form-label" %>
-    <%= form.select :equipment_type, options_for_select(["Aire acondicionado", "Calentador"]), {}, class: "form-control" %>
+    <%= form.select :equipment_type, options_for_select(["Aire acondicionado", "Calentador"]), {}, class: "form-control", placeholder: "Select equipment type" %>
   </div>
 
   <div class="mb-3">
     <%= form.label :name, class: "form-label" %>
-    <%= form.text_field :name, class: "form-control" %>
+    <%= form.text_field :name, class: "form-control", placeholder: "Enter equipment name" %>
   </div>
 
   <div class="mb-3">
     <%= form.label :description, class: "form-label" %>
-    <%= form.text_area :description, class: "form-control" %>
+    <%= form.text_area :description, class: "form-control", placeholder: "Enter equipment description" %>
   </div>
 
   <div class="mb-3">
     <%= form.label :photo, class: "form-label" %>
-    <%= form.file_field :photo, class: "form-control" %>
+    <%= form.file_field :photo, class: "form-control", placeholder: "Upload equipment photo" %>
   </div>
 
   <div>
-    <%= form.submit "Actualizar", class: "btn btn-success" %>
+    <%= link_to "Back", equipment_index_path, class: "btn btn-outline-secondary" %>
+    <%= form.submit (params[:action] == 'new') ? 'Create' : 'Update', class: 'btn btn-success' %>
   </div>
 <% end %>
