--- a/app/views/equipment/_equipment.html.erb
+++ b/app/views/equipment/_equipment.html.erb
@@ -17,12 +17,14 @@
       </span>
     </span>
 
-    <h6 class="item-section__h6">
-      Description
-    </h6>
-    <p class="item-section__p">
-      <%= equipment.description %>
-    </p>
+    <span>
+      <h6 class="item-section__h6">
+        Description
+      </h6>
+      <p class="item-section__p">
+        <%= equipment.description %>
+      </p>
+    </span>
 
   </div>
 
