--- a/app/views/maintainers/show.html.erb
+++ b/app/views/maintainers/show.html.erb
@@ -1,16 +1,22 @@
-<p style="color: green"><%= notice %></p>
-<div class="col-4 mx-auto">
-  <%= render @maintainer %>
-
-  <div class="d-flex justify-content-between">
-
-    <div>
-      <%= link_to "Volver", maintainers_path, class: "btn btn-outline-secondary" %>
-      <%= link_to "Editar", edit_maintainer_path(@maintainer), class: "btn btn-primary" %>
+<div class="container-only col-md-4">
+  <% if notice.present? %>
+    <div id="success-alert" class="alert alert-success" role="alert">
+      <%= notice %>
     </div>
-    <% if current_user.admin == 'admin' %>
-      <%= button_to "Eliminar", @maintainer, method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
-    <% end %>
+  <% end %>
+
+  <div class="header">
+    <div class="header__left">
+      <%= link_to "Back", maintainers_path, class: "btn btn-outline-secondary" %>
+    </div>
+    <div class="header__right">
+      <%= link_to "Edit", edit_maintainer_path(@maintainer), class: "btn btn-primary" %>
+      <% if current_user.admin == 'admin' %>
+        <%= button_to "Delete", @maintainer, method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure?" } %>
+      <% end %>
+    </div>
   </div>
-</div>
+  <%#  %>
+  <%= render @maintainer %>
+  <%#  %>
 </div>
